# waven2

./: LICENSE  README.md  figures.pptx  pyproject.toml
waven2/: 1_gabor_test.ipynb  2_gabor_library_test.ipynb  3_video_decomposition.ipynb  3_video_decomposition_test.ipynb  4_analysis_test.ipynb  4_simple_feature_estimation_test.ipynb  5_complex_feature_estimation_test.ipynb  5_complex_feeature_estimation_test.ipynb  6_full_modell_test.ipynb  S1_gabor_test_vS.ipynb  S2_gabor_library_generation_vS.ipynb  S2_gabor_library_vS.ipynb  S3_video_decomposition_vS.ipynb  S4_feature_estimation_vS.ipynb  S4_simple_feature_estimation_test_vS.ipynb  S5_complex_feature_estimation_vS.ipynb  __init__.py  analysis_utils.py  full_analysis.py  full_analysis_vSpeed3.py  gabor_library_test.ipynb  gabor_test.ipynb  noise_test.ipynb  sophie_model.py  todo notes.md  torch_utils.py  video_decomposition_test.ipynb  wavelet_utils.py  wavelet_utils_vSpeed.py
waven2/0_Skriabine_reproduction/: 2_gabor_library_generation.ipynb  4_simple_feature_estimation_test.ipynb
waven2/1_drift_try/: S3_video_decomposition_vS.ipynb  S4_feature_estimation_vS.ipynb  analysis_utils.py  wavelet_utils_vSpeed.py
waven2/2_flow_try/: analysis_utils.py
waven2/Skriabine_reproduction/: 6_sophie_modell_test.ipynb
waven2/meghaladott darabok/: S_quickstat.ipynb  flow_test.ipynb  full_analysis_vSpeed.py  full_analysis_vSpeed2.ipynb  full_analysis_vSpeed2.py  full_analysis_vSpeed3.py
waven2/tests notebooks/: noise_test.ipynb  simple_quadratic_peak_fit_test.ipynb
waven2/visual_cortex_cell_browser/: GripSplitter.py  (+5 more)
