[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waven2"
version = "0.1.0"
description = "Analyze visual cortex neuronal responses to visual stimuli with Gabor and wavelet-based tools."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Gergely Katona" },
]
dependencies = [
    "matplotlib",
    "numpy",
    "opencv-python",
    "pandas",
    "pyqtgraph",
    "PySide6",
    "scikit-image",
    "scipy",
    "torch",
    "tqdm",
]

[project.scripts]
cell_browser = "waven2.visual_cortex_cell_browser.app:main"
cell-browser = "waven2.visual_cortex_cell_browser.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "waven2",
    "waven2.visual_cortex_cell_browser",
]
exclude = [
    "waven2.0_*",
    "waven2.1_*",
    "waven2.meghaladott*",
    "waven2.test*",
    "waven2.tests*",
]
